--- a/src/components/Rating/style.css
+++ b/src/components/Rating/style.css
@@ -1,22 +1,16 @@
-.tag {
-	min-width: 4rem;
-	margin-top: 0.75rem;
-	margin-right: 0.625rem;
-	padding: 0.125rem 0.625rem;
-	border-radius: 0.3125rem;
-	color: #fff;
-	font-size: 0.625rem;
-	line-height: 142.6%;
-	text-align: center;
-	vertical-align: middle;
+.star, .star-empty {
+	width: 0.9375rem;
+	height: 0.9375rem;
+	margin-right: 0.3125rem;
+	color: red;
 }
 @media screen and (min-width: 768px) {
-	.tag {
-		min-width: 7.1875rem;
-		margin-top: 0;
+	.star, .star-empty {
+		width: 1.875rem;
+		height: 1.875rem;
 		margin-right: 0.625rem;
-		padding: 0.1875rem 0.9375rem;
-		border-radius: 0.625rem;
-		font-size: 0.875rem;
    }
+}
+.star-empty {
+	color: white;
 }
