--- a/src/components/Collapse/style.css
+++ b/src/components/Collapse/style.css
@@ -1,82 +1,70 @@
-/* COLLAPSE */
-.collapse {
-	display: flex;
-	align-items: center;
-	height: 1.875rem;
-	padding-left: 0.75rem;
-	border: none;
-	border-radius: 0.3125rem;
-	background-color: #ff6060;
-	cursor: pointer;
-	transition: background-color 0.6s ease;
+.AccordionLogement {
+    display: flex;
+    justify-content: center;
 }
-@media screen and (min-width: 768px) {
-	.collapse {
-		height: 2.9375rem;
-		padding-left: 1.125rem;
-   }
+.AccordionLogement .false {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: flex-start;
+    margin: 0 2.5% 0 2.5%;
 }
-.collapse-section {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 1.25rem;
+
+.AccordionLogement div {
+    
+    border-radius: 10px;
 }
-@media screen and (min-width: 768px) {
-	.collapse-section {
-		margin-bottom: 1.9375rem;
-		padding-right: 6.75rem;
-		padding-left: 6.75rem;
-   }
+.accordionTitle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #FF6060;
+    padding: 1rem;
+    font-weight: bold;
+    border-radius: 5px;
+    color: white;
+	font-size: 18px;
+    height: 15px;
 }
-.collapse-title {
-	color: #fff;
-	font-size: 0.8125rem;
-	font-weight: 500;
-	line-height: 142.6%;
+.false i {
+    transform: rotate(180deg);
+    transition: 0.3s;
 }
-@media screen and (min-width: 768px) {
-	.collapse-title {
-		font-size: 1.5rem;
-   }
+
+.active .accordionContent {
+    display: flex;
+    align-items: center;
+    visibility: visible;
+    overflow: visible;
+    padding: 1rem;
+    transition: 0.3s;
+    opacity: 1;
+    border-radius: 5px;
+    background: #f7f7f7;
+    font-size: 14px;
+    color: #FF6060;
+    margin-bottom: 20px;
 }
-.collapse-icon {
-	width: 1.125rem;
-	height: 1.125rem;
-	margin-right: 0.375rem;
-	margin-left: auto;
-	transition: -webkit-transform 0.6s ease;
-	transition: transform 0.6s ease;
+
+.AccordionLogement .active {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: flex-start;
+    margin: 0 2.5% 0 2.5%;
 }
-@media screen and (min-width: 768px) {
-	.collapse-icon {
-		width: 1.4375rem;
-		height: 0.875rem;
-		margin-right: 2rem;
-   }
+
+.accordionContent {
+    visibility: hidden;
+    height: auto;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0 1rem;
 }
-.collapse-content {
-	overflow: hidden;
-	transition: max-height 0.6s ease;
-}
-.collapse-text {
-	padding-top: 1.125rem;
-	padding-right: 0.375rem;
-	padding-bottom: 1.125rem;
-	padding-left: 0.75rem;
-	background: #f7f7f7;
-	color: #ff6060;
-	font-size: 0.75rem;
-	line-height: 142.6%;
-}
-@media screen and (min-width: 768px) {
-	.collapse-text {
-		padding-top: 2.25rem;
-		padding-right: 1.6875rem;
-		padding-bottom: 2.25rem;
-		padding-left: 1.125rem;
-		font-size: 1.5rem;
-   }
-}
-.rotate {
-	transform: rotate(180deg);
-}
+/*
+@media screen and(min-width: 1004px) {
+	.accordionTitle{
+		
+	}
+	
+}*/
