--- a/src/components/Thumb/style.css
+++ b/src/components/Thumb/style.css
@@ -5,12 +5,6 @@
 	transform: scale(1);
 	transition-duration: 0.5s;
 }
-@media screen and (min-width: 768px) {
-	.thumb {
-		position: static;
-		margin: 0;
-   }
-}
 .thumb:hover {
 	transform: scale(1.05);
 	transition-duration: 0.5s;
@@ -31,14 +25,26 @@
 	font-size: 1.125rem;
 	font-weight: 500;
 	line-height: 142.6%;
+} 
+
+.thumb-wrapper{
+	width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.thumb, .thumb-cover-wrapper img {
+	height: 15.9375rem;
+}
+
 @media screen and (min-width: 768px) {
 	.thumb-title {
 		bottom: 1.25rem;
-   }
-}
-.thumb, .thumb-cover-wrapper img {
-	height: 15.9375rem;
+	}
 }
 @media screen and (min-width: 768px) {
 	.thumb, .thumb-cover-wrapper img {
