--- a/src/pages/Annonce/style.css
+++ b/src/pages/Annonce/style.css
@@ -1,22 +1,33 @@
 /* LOGEMENT */
+.description-equipments-wrapper{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
 .annonce-title {
 	margin-top: 0.9375rem;
 	margin-bottom: 0;
-	font-size: 1.125rem;
+	font-size: 36px;
 	font-weight: 500;
-	line-height: 142.6%;
 }
 .annonce-location {
+	color:#ff6060;
 	margin-top: 0.3125rem;
 	margin-bottom: 0;
-	font-size: 0.875rem;
+	font-size: 18px;
 	font-weight: 500;
-	line-height: 142.6%;
+	padding-bottom:20px;
 }
+
 .tag-wrapper {
 	display: flex;
 	flex-wrap: wrap;
 }
+
 .rating-host-wrapper {
 	display: flex;
 	align-items: center;
@@ -25,17 +36,21 @@
 	margin-bottom: 1rem;
 }
 .host-wrapper {
+	
 	display: flex;
 	align-items: center;
 }
+
 .host-name {
+	color: #ff6060;
 	margin-right: 0.75rem;
 	font-size: 0.75rem;
 	font-weight: 500;
 	text-align: end;
 }
+
 .host-picture {
-	width: 2rem;
-	height: 2rem;
+	width: 50px;
+	height: 50px;
 	border-radius: 100%;
 }
