--- a/src/variables.css
+++ b/src/variables.css
@@ -31,7 +31,7 @@ $breakpoints: (
 }
 
 
-/* Création d'un filtre qui recolorera l'image à la couleur spécifiée. */
+/* Création d'un filtre qui recolorera l'image à la couleur spécifiée. 
 @mixin recolor($color: #000, $opacity: 1) {
 	$r: calc(red($color) / 255);
 	$g: calc(green($color) / 255);
@@ -57,4 +57,4 @@ $breakpoints: (
       </filter>\
     </svg>\
     ##{$svg-filter-id}');
-}
+}*/
